fix grid gap; update title

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <div id="top-part">
       <div id="info-bar"></div>
       <header>
-        <h1>CodeX</h1>
-        <h2>Landing Page</h2>
+        <h1>Code<span>X</span></h1>
+        <h2>Solutions for</h2>
       </header>
     </div>
     <main>
