--- a/index.html
+++ b/index.html
@@ -38,19 +38,7 @@
           eget, efficitur leo. Mauris porta neque non egestas porttitor. Sed
           bibendum placerat nibh non aliquam. Proin condimentum eros faucibus
           lorem convallis, eu feugiat nisl laoreet. Nunc rutrum hendrerit
-          facilisis. Suspendisse venenatis, augue eu elementum pellentesque,
-          arcu nisl condimentum risus, non laoreet nisl eros id tellus.
-          Pellentesque habitant morbi tristique senectus et netus et malesuada
-          fames ac turpis egestas. Sed ornare dictum faucibus. Aliquam posuere
-          mollis aliquam. Ut ac libero a ipsum finibus iaculis in tincidunt mi.
-          Ut congue, dui porta laoreet feugiat, mi elit convallis ligula, quis
-          euismod sapien felis in velit. Aliquam gravida, urna nec volutpat
-          viverra, turpis dolor condimentum velit, et sodales nibh elit non
-          ante. Pellentesque habitant morbi tristique senectus et netus et
-          malesuada fames ac turpis egestas. Suspendisse vestibulum pretium
-          arcu, a placerat est pharetra nec. Nam vel mauris laoreet, lacinia mi
-          et, ultrices urna. Nullam vel lorem faucibus sapien malesuada mollis
-          vitae id lacus.
+          facilisis.
         </p>
       </div>
       <div id="who-we-need">
@@ -65,22 +53,7 @@
           tempus. Aliquam dapibus nisi a est mollis, pulvinar dictum nisl
           auctor. Donec sit amet augue non nulla molestie viverra. Duis quis
           placerat mauris. Curabitur sit amet quam placerat, ultrices felis
-          eget, efficitur leo. Mauris porta neque non egestas porttitor. Sed
-          bibendum placerat nibh non aliquam. Proin condimentum eros faucibus
-          lorem convallis, eu feugiat nisl laoreet. Nunc rutrum hendrerit
-          facilisis. Suspendisse venenatis, augue eu elementum pellentesque,
-          arcu nisl condimentum risus, non laoreet nisl eros id tellus.
-          Pellentesque habitant morbi tristique senectus et netus et malesuada
-          fames ac turpis egestas. Sed ornare dictum faucibus. Aliquam posuere
-          mollis aliquam. Ut ac libero a ipsum finibus iaculis in tincidunt mi.
-          Ut congue, dui porta laoreet feugiat, mi elit convallis ligula, quis
-          euismod sapien felis in velit. Aliquam gravida, urna nec volutpat
-          viverra, turpis dolor condimentum velit, et sodales nibh elit non
-          ante. Pellentesque habitant morbi tristique senectus et netus et
-          malesuada fames ac turpis egestas. Suspendisse vestibulum pretium
-          arcu, a placerat est pharetra nec. Nam vel mauris laoreet, lacinia mi
-          et, ultrices urna. Nullam vel lorem faucibus sapien malesuada mollis
-          vitae id lacus.
+          eget, efficitur leo.
         </p>
         <h2 class="who-we-need">Who We Need<br /><span><----</span></h2>
       </div>
