--- a/index.html
+++ b/index.html
@@ -58,5 +58,10 @@
         <h2 class="who-we-need">Who We Need<br /><span><----</span></h2>
       </div>
     </main>
+    <footer>
+      <div id="contact">
+        <h3>Hit us up on <span>example@example.com</span></h3>
+      </div>
+    </footer>
   </body>
 </html>
