--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </main>
     <footer>
       <div id="contact">
-        <h3>Hit us up on <span>example@example.com</span></h3>
+        <h3>Contact Us <span>example@example.com</span></h3>
       </div>
     </footer>
   </body>
