--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <h2 class="who-we-need">Who We Need<br /><span><----</span></h2>
       </div>
     </main>
-    <footer>
+    <footer class="footer">
       <div id="contact">
         <h3>Contact Us <span>example@example.com</span></h3>
       </div>
