--- a/index.html
+++ b/index.html
@@ -20,40 +20,27 @@
     </div>
     <main>
       <div id="vision">
-        <h2 class="vision">
-          Vision<br />
-          ---->
-        </h2>
+        <h2 class="vision">Vision</br><span>----></span></h2>
         <p class="vision-text">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sed
-          consequat lorem. Maecenas ultricies vestibulum felis. Donec tincidunt
-          quis lorem sed aliquam. In lacinia, ante ac consectetur consequat,
-          lorem nisl tincidunt purus, ac tincidunt nisl lorem quis neque. In in
-          quam imperdiet, malesuada nisl vitae, varius leo. Curabitur aliquam
-          massa vel erat accumsan laoreet. Interdum et malesuada fames ac ante
-          ipsum primis in faucibus. Cras vel diam sit amet mauris malesuada
-          tempus. Aliquam dapibus nisi a est mollis, pulvinar dictum nisl
-          auctor. Donec sit amet augue non nulla molestie viverra. Duis quis
-          placerat mauris. Curabitur sit amet quam placerat, ultrices felis
-          eget, efficitur leo. Mauris porta neque non egestas porttitor. Sed
-          bibendum placerat nibh non aliquam. Proin condimentum eros faucibus
-          lorem convallis, eu feugiat nisl laoreet. Nunc rutrum hendrerit
-          facilisis.
+          CodeX is a group of software engineers looking to collaborate, learn
+          and solve real world problems. We strive on the philosophy that each
+          member's ideas will be heard and taken into consideration, and upon
+          depolyment our projects will profit each member equally. As CodeX
+          grows and members elevate their abilities, we will continue to push
+          for larger projects and continue to solve larger problems. Solutions
+          for X, as a variable X can mean many things, use any problem in your
+          life as X. Through engineering we believe we can solve for X together.
         </p>
       </div>
       <div id="who-we-need">
         <p class="who-text">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sed
-          consequat lorem. Maecenas ultricies vestibulum felis. Donec tincidunt
-          quis lorem sed aliquam. In lacinia, ante ac consectetur consequat,
-          lorem nisl tincidunt purus, ac tincidunt nisl lorem quis neque. In in
-          quam imperdiet, malesuada nisl vitae, varius leo. Curabitur aliquam
-          massa vel erat accumsan laoreet. Interdum et malesuada fames ac ante
-          ipsum primis in faucibus. Cras vel diam sit amet mauris malesuada
-          tempus. Aliquam dapibus nisi a est mollis, pulvinar dictum nisl
-          auctor. Donec sit amet augue non nulla molestie viverra. Duis quis
-          placerat mauris. Curabitur sit amet quam placerat, ultrices felis
-          eget, efficitur leo.
+          With four front-end developers able to handle design and UI, we are
+          looking for back-end developers wanting to level up their skills. Node
+          and Python are the preferred server side languages. We also need
+          people to create and manage databases. This group is for you if want
+          to work as a team and get away from solo developing. See what your
+          small ideas can blossom into here. The only thing we require is time
+          and effort.
         </p>
         <h2 class="who-we-need">Who We Need<br /><span><----</span></h2>
       </div>
