--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           small ideas can blossom into here. The only thing we require is time
           and effort.
         </p>
-        <h2 class="who-we-need">Who We Need<br /><span><----</span></h2>
+        <h2 class="who-we-need">We Need<br /><span><----</span></h2>
       </div>
     </main>
     <footer class="footer">
