Updated Contact Us Information
Added href to the contact us section.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </main>
     <footer class="footer">
       <div id="contact">
-        <h3>Contact Us <span>example@example.com</span></h3>
+        <h3><a href="mailto:codexengineers@gmail.com">Contact Us!</a></h3>
       </div>
     </footer>
   </body>
